--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="js/main.js" type="module" defer></script>
 </head>
 <body>
+    <h1 class="text-center">System the bill hunters</h1>
     <my-header></my-header>
+    <h1 class="text-center">Bill details</h1>
 </body>
 </html>
