feat(Add code): :sparkles: Working design

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <h1 class="text-center">System the bill hunters</h1>
     <my-header></my-header>
     <h1 class="text-center">Bill details</h1>
+    <my-body></my-body>
 </body>
 </html>
